--- a/index.yaml
+++ b/index.yaml
@@ -13,6 +13,12 @@ indexes:
 - kind: Songs
   properties:
   - name: queue
+  - name: tags
+  - name: timestamp
+
+- kind: Songs
+  properties:
+  - name: queue
   - name: timestamp
 
 - kind: Songs
